finished date documentation

--- a/flu-trained-models/usa_nextweek_c19.ipynb
+++ b/flu-trained-models/usa_nextweek_c19.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sklearn\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "import datetime"
    ]
   },
   {
@@ -319,16 +320,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['6', '17', '20']"
+       "'06/24/20'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +338,10 @@
     "# getting appropriate dates for final prediction\n",
     "\n",
     "final_date = us_weekly_cases.index[-1]\n",
-    "final_date_elements = final_date.split('/')\n",
-    "final_date_elements"
+    "final_datetime = datetime.datetime.strptime(final_date, \"%m/%d/%y\")\n",
+    "one_week_date = final_datetime + datetime.timedelta(days=7)\n",
+    "one_week_future_datestring = one_week_date.strftime(\"%m/%d/%y\")\n",
+    "one_week_future_datestring"
    ]
   },
   {
@@ -774,7 +777,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## finally, the prediction of new cases in between last Wednesday and upcoming Wednesday"
+    "## finally, the prediction of new cases after last Wednesday and through upcoming Wednesday \n",
+    "#### (if today is Wednesday, then today is considered the upcoming Wednesday)"
    ]
   },
   {
@@ -825,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +850,7 @@
      "text": [
       "According to model prediction, \n",
       "there will be 148292 new COVID-19 cases in the US, \n",
-      "in between this past Wednesday and this upcoming Wednesday.\n"
+      "after 6/17/20 and through 06/24/20.\n"
      ]
     }
    ],
@@ -858,7 +862,7 @@
     "  plot.show()\n",
     "  print(\"According to model prediction, \")\n",
     "  print(\"there will be {} new COVID-19 cases in the US, \".format(int(predicted_cases)))\n",
-    "  print(\"in between this past Wednesday and this upcoming Wednesday.\")"
+    "  print(\"after {} and through {}.\".format(final_date, one_week_future_datestring))"
    ]
   },
   {
