some final formatting

--- a/flu-trained-models/california/cali_future_range.ipynb
+++ b/flu-trained-models/california/cali_future_range.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# California Future Range Weeks', trained on historical flu data and temperature\n",
+    "# California COVID-19 Future Range Weeks' Prediction, trained on historical flu data and temperature\n",
     "\n",
     "> Once again, just like before in the USA flu model, I am going to index COVID weekly cases by Wednesdays"
    ]
