edited graph labeling at the end of several notebooks

--- a/flu-trained-models/florida/florida_faketemps.ipynb
+++ b/flu-trained-models/florida/florida_faketemps.ipynb
@@ -1737,7 +1737,7 @@
     "    actual_future = region_wnew_cases_norm[len(covid_temp_data):]\n",
     "    plot = multi_step_prediction(x[0] * peak_guess, actual_future * peak_guess, predicted_cases * peak_guess)\n",
     "    plot.title(region_string + \" COVID Cases Prediction, w/out temps\")\n",
-    "    plot.xlabel('Week (defined by Wednesdays; 0 is next week/Wednesday)')\n",
+    "    plot.xlabel('Week (defined by Wednesdays)')\n",
     "    plot.ylabel('New Cases')\n",
     "    plot.grid()\n",
     "    plot.show()"
